spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,11 @@
   border-radius: 0.375rem 0 0 0.375rem;
 }
 
+@media (min-width: 768px) {
+  #listing-cont {
+    height: 70vh;
+  }
+}
 @media (max-width: 768px) {
   .listing-img {
     border-radius: 0.375rem 0.375rem 0 0;
