--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -94,6 +94,12 @@ $btn-font-weight: 600;
     border-radius: 0.375rem 0 0 0.375rem;
 }
 
+@media (min-width: 768px) {
+#listing-cont {
+    height: 70vh;
+}
+}
+
 @media (max-width: 768px) {
     .listing-img {
             border-radius: 0.375rem 0.375rem 0 0;
